# gym2real

./: .gitignore  .gitmodules  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  build  index.md
Setup/: Robot.md
_includes/: head_custom.html  nav.html
_layouts/: default.html
_site/: index.html
_site/about/: about.html
_site/assets/js/: search-data.json
_site/install/: install.html
_site/robot/: robot.html
pages/: about.md
pages/background/: background.md  rl.md  twip.md
pages/docs/: docs.md
pages/docs/controllers/: controller.md  controllers.md  controlnodes.md  onnxcontroller.md  pidcontroller.md  transforms  transforms.md
pages/docs/devices/: connectioni2c.md  device.md  devices.md  imu.md
pages/docs/drivers/: drivers.md  imudriver.md  motordriver.md
pages/docs/memory/: memory.md  memorymanager.md
pages/setup/: install.md  jetson.md  robot.md  setup.md  simulation.md
pages/usage/: building.md  running.md  training.md  usage.md
robot/: robot.md
scripts/: docker_run  post_inst
workspace/cfg/: Twip.pth.onnx  config.yaml
workspace/controller/: CMakeLists.txt  package.xml
workspace/controller/include/controller/: control_node.h  controller.hpp  controller_node.hpp  memory_manager.hpp  transform.hpp
workspace/controller/launch/: controller.launch.py
workspace/controller/src/: controller.cpp  controller_node.cpp
workspace/core/: CMakeLists.txt  package.xml
workspace/core/include/core/: device.hpp
workspace/device/: CMakeLists.txt  package.xml
workspace/device/include/device/: device.hpp  imu.h
workspace/device/src/: imu.cpp
workspace/driver/: CMakeLists.txt  package.xml
workspace/driver/include/driver/: imu_driver.h  motor_driver.h
workspace/driver/src/: imu_driver.cpp  motor_driver.cpp
workspace/imu/include/imu/: imu_driver.h
workspace/imu/src/: imu.cpp
