<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemtypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>controller</name>
    <version>0.0.0</version>
    <description>Core functionality</description>
    <maintainer email="kevinh42@student.ubc.ca">Kevin Huang</maintainer>
    <license>BSD 3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>driver</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>